# paperbridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  scratch.ipynb
notebooks/: zotero_examples.ipynb  zotero_library.bib
src/paperbridge/: __init__.py  _config.py  _logging.py  aggregator.py
src/paperbridge/clients/: __init__.py  _base.py  arxiv.py  base_search.py  crossref.py  document_parser.py  doi.py  downloader.py  europepmc.py  openalex.py  pubmed.py  unpaywall.py  zotero.py
src/paperbridge/models/: __init__.py  article.py  arxiv.py  base_search.py  citation_graph.py  citation_workflow.py  crossref.py  document.py  doi.py  download.py  europepmc.py  extraction.py  open_access.py  openalex.py  pubmed.py  workflow_config.py  zotero.py
src/paperbridge/utils/: __init__.py  bibtex.py  exporter.py  pdf_parser.py
tests/: conftest.py  test_aggregator.py  test_clients_base.py  test_clients_crossref.py  test_clients_pubmed.py  test_clients_zotero.py  test_exporter.py  test_models.py
